Removed AOS library to fix missing content issue.  This also fixed the white space issue

--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,9 @@ html,body
 	margin-left: 1.5%;
 	margin-right: 1.5%;
 	font-family: 'Maven Pro', sans-serif;
-
 }
+
+
 
 .namePlate {
 	width: 100%;	
@@ -129,7 +130,10 @@ html,body
 	box-shadow: 2px 2px 2px white;
 }
 
+
+
 .contactContain {
+	overflow-x: hidden;
 	width: 100%;
 	height: 100px;
 	display: inline-flex;
@@ -180,20 +184,29 @@ h2 {
 	font-size: 2.25em;
 }
 
-[aos="fade"] {
-	opacity: 0;
-	transition-property: opacity;
+p {
+	padding:0;
+	margin: 0;
 }
 
-[aos="fade"].aos-animate {
-	opacity: 1;
+p.head-Text {
+	margin: 50px;
 }
 
 @media screen and (max-width: 1000px) {
+	html,border-style: {
+      width: 100%;
+  	  height: 100%;
+   	  margin: 0px;
+      padding: 0px;
+      overflow-x: hidden; 
+}
+
 	.col1 {
+		margin: auto;
 		float: none;
 		text-align: center;
-		width: auto;
+		width: 80%;
 	}
 
 	.topPanel {
@@ -215,6 +228,7 @@ h2 {
 	
 
 .nextPanel {
+	text-align: center;
 	height: auto;
 	position: static;
 	text-align: center;
@@ -238,14 +252,16 @@ h2 {
 	position: static;
 	border-top: .5px solid black;
 	text-align: center;
-	width: 100%;
+	width: auto;
 	background-color: #95A8A7;
 	margin: 0;
 }
 
 .item {
-	width: 350px;
+	width: 80%;
 }
+
+
 
 li {
 	margin-left:2%;
